--- a/_manifest.yml
+++ b/_manifest.yml
@@ -1,4 +1,4 @@
-name: dates
+name: date-utilities
 title: Espanso Package for Dates on a Mac
 description: Expansions for popular dates used. Requires gdate from macports.
 version: 1.0.0
